api hardeing and refined service
